tests/macros/duplicate/mask.stderr
error: duplicate option `mask`
 --> $DIR/mask.rs:4:9
  |
4 |         mask: todo!(),
  |         ^^^^
