tests/macros/duplicate/mask.rs
fn main() {
    let q = inquisition::questions![password {
        mask: todo!(),
        mask: todo!(),
    }];
}
